--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<!-- Include the AngularJS routing library -->
 	<script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
-
 </head>
-<body ng-app="BoilerplateApp" ng-controller="IndexController">
+<body ng-app="BooksApp" ng-controller="IndexController">
 	<!-- navigator and footer and ng-view in the middle -->
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
@@ -70,6 +69,8 @@
 	<script src="js/controllers/LoginController.js"></script>
 	<script src="js/controllers/SignupController.js"></script>
 	<script src="js/controllers/IndexController.js"></script>
+	<script src="js/controllers/SettingsController.js"></script>
+	<script src="js/controllers/MyBooksController.js"></script>
 
 </body>
 </html>
