--- a/public/index.html
+++ b/public/index.html
@@ -29,22 +29,23 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Starter Boilerplate</a>
+				<a class="navbar-brand" href="/">Books</a>
 			</div>
 
 			<!-- Collect the nav links, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Link</a></li>
+					<li class="ng-hide" ng-show="user.local.email"><a href="myBooks">My Books</a></li>
 				</ul>
 				<!-- right navbar login and signup and logout -->
 				<ul class="nav navbar-nav navbar-right">
-					<p class="navbar-btn" ng-hide="user.isLoggedIn">
+					<p class="navbar-btn" ng-hide="user.local.email">
 						<a href="/login" class="btn btn-primary">Login</a>
 						<a href="/signup" class="btn btn-default">Sign Up</a>
 					</p>
-					<p class="navbar-btn" ng-show="user.isLoggedIn">
-						Welcome, {{user.email}}!
+					<p class="navbar-btn" class="ng-hide" id="loggedInNav" ng-show="user.local.email">
+						Welcome, {{user.local.email}}!
+						<a href="settings" class="btn btn-default">Settings</a>
 						<a ng-click="logout()" class="btn btn-danger">Logout</a>
 					</p>
 				</ul>
