--- a/public/index.html
+++ b/public/index.html
@@ -34,43 +34,42 @@
 			<!-- Collect the nav links, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar">
 				<ul class="nav navbar-nav">
-					<li class="ng-hide" ng-show="user.local.email"><a class="border" href="myBooks">My Books</a></li>
+					<li><a class="border white mediumFont" href="/">Home</a></li>
+					<li class="ng-hide" ng-show="user.local.email"><a class="border white mediumFont" href="myBooks">My Books</a></li>
 				</ul>
 				<!-- right navbar login and signup and logout -->
-				<ul class="nav navbar-nav navbar-right">
-					<p class="navbar-btn" ng-hide="user.local.email">
-						<a href="/login" class="btn btn-primary">Login</a>
-						<a href="/signup" class="btn btn-default">Sign Up</a>
-					</p>
-					<p class="navbar-btn" class="ng-hide" id="loggedInNav" ng-show="user.local.email">
-						Welcome, {{user.local.email}}!
-						<a href="settings" class="btn btn-default">Settings</a>
-						<a ng-click="logout()" class="btn btn-danger">Logout</a>
-					</p>
+				<ul class="nav navbar-nav navbar-right navbar-btn " ng-hide="user.local.email">
+					<li><a href="/login" class="border blue mediumFont">Login</a></li>
+					<li><a href="/signup" class="border white mediumFont">Sign Up</a></li>
 				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
+				<ul class="nav navbar-nav navbar-right navbar-btn ng-show" ng-show="user.local.email">
+					<li><a href="settings" class="border white mediumFont">Settings</a></li>
+					<li><a ng-click="logout()" class="border red mediumFont" href="#">Logout</a></li>
+				</ul>
+			</ul>
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
+</nav>
 
-	<div ng-view class="view"></div>
+<div ng-view class="view"></div>
 
-	<!-- footer -->
-	<div class="navbar navbar-default navbar-fixed-bottom nav-center">
-		<div class="container nav nav-center">
-			<ul class="footer navbar-text nav nav-center white">©2015 - Books is built by Nicola Ferracin</ul>
-		</div>
+<!-- footer -->
+<div class="navbar navbar-default navbar-fixed-bottom nav-center">
+	<div class="container nav nav-center">
+		<p class="white footer navbar-text nav nav-center">©2015 - Books is built by Nicola Ferracin</p>
 	</div>
+</div>
 
-	<!-- Modules -->
-	<script src="js/app.js"></script>
+<!-- Modules -->
+<script src="js/app.js"></script>
 
-	<!-- Controllers -->
-	<script src="js/controllers/HomeController.js"></script>
-	<script src="js/controllers/LoginController.js"></script>
-	<script src="js/controllers/SignupController.js"></script>
-	<script src="js/controllers/IndexController.js"></script>
-	<script src="js/controllers/SettingsController.js"></script>
-	<script src="js/controllers/MyBooksController.js"></script>
+<!-- Controllers -->
+<script src="js/controllers/HomeController.js"></script>
+<script src="js/controllers/LoginController.js"></script>
+<script src="js/controllers/SignupController.js"></script>
+<script src="js/controllers/IndexController.js"></script>
+<script src="js/controllers/SettingsController.js"></script>
+<script src="js/controllers/MyBooksController.js"></script>
 
 </body>
 </html>
