--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Starter Boilerplate</title>
+	<title>Books</title>
 	<!-- Import boostrap and jquery -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
